@@ -3,10 +3,11 @@ FilePeruser User Guide
 ----------------------
 
 1. Usage:
-       ./FilePeruser [search string] [root directory] [flags]
+       ./FilePeruser [search string] -d [root directory] [flags]
    Valid flags:
        -h or --help: prints help and exits program
        -x or --exclude: next argument is a directory to exclude
+       -d or --dir: next argument is the root directory of the search
    Notes:
        all spaces in [search string], [root directory], and any excluded
            directories must be properly escaped to function properly
